--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "MERN eCommerce Project",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server/server"
+    "start": "node server/server",
+    "server": "nodemon server/server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
