--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.0",
     "node-sass": "^4.14.1",
+    "ramda": "^0.27.1",
+    "ramda-extension": "^0.10.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
