--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "ramda": "^0.27.1",
+    "sharp": "^0.27.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
